fix z-index and legend namings

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -21,7 +21,6 @@
     background: #fff;
     transition: right 0.3s, width 0.3s ease-in-out;
     overflow-y: auto;
-    z-index: 1040;
     padding: 1rem;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
 }
@@ -32,7 +31,7 @@
 }
 
 .details-panel {
-    z-index: 1030;
+    z-index: 1050;
 }
 
 .filter-panel {
